examples/test/testpolicy4605.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4605
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key7: value34
      key6: value5
      key28: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value40
          key20: value4
          key42: value40
      podSelector:
        matchLabels:
          key16: value1
